--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "dotenv": "^16.6.1",
-    "hardhat": "^2.26.3"
+    "hardhat": "^2.28.2"
   },
   "description": "",
   "main": "hardhat.config.js",
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs"
+  "type": "commonjs",
+  "dependencies": {
+    "ethers": "^6.16.0"
+  }
 }
